styleguide/public/styles.css
@import "https://fonts.googleapis.com/css?family=Lato:300,400,700";
html, body, div, span, applet, object, iframe,
blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}

body {
  line-height: 1;
}

blockquote, q {
  quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

body {
  font-family: Lato, Arial, Helvetica, sans-serif;
  font-size: 16px;
  line-height: 1.5em;
}

a {
  color: #1f9ad7;
  text-decoration: none;
}

strong {
  font-weight: bold;
}

em {
  font-style: italic;
}

html {
  box-sizing: border-box;
}

*, *:before, *:after {
  box-sizing: inherit;
}

h1, h2, h3 {
  font-family: "Trebuchet MS", Helvetica, sans-serif;
}

h1 {
  font-size: 2.0em;
  line-height: 1.15em;
}

h2 {
  font-size: 1.5em;
  line-height: 1.25em;
  font-weight: normal;
  margin-bottom: 1em;
}

h3 {
  font-size: 1.2em;
  line-height: 1.40em;
  font-weight: normal;
}

p {
  margin: 0;
  padding: 0 0 1.5em 0;
  border: 0;
}

ul, ol {
  margin: 0 0 0 25px;
  padding: 0 0 20px 0;
  border: 0;
}

.c-button {
  font-size: 1em;
  line-height: 1.2em;
  display: inline-block;
  margin: 0;
  background-color: white;
  color: #000;
  border: 1px solid #CCCCCC;
  border-radius: 5px;
  padding: 0.4em 17px 0.55em 17px;
}
.c-button:hover, .c-button.pseudo-class-hover {
  background-color: #efefef;
}

.c-button--blue {
  background-color: #1f9ad7;
  color: #FFFFFF;
  border: 1px solid #1f9ad7;
}
.c-button--blue:hover, .c-button--blue.pseudo-class-hover {
  background-color: #FFFFFF;
  color: #1f9ad7;
}

.c-button--grey {
  background-color: #A9A9A9;
  color: #FFFFFF;
  border: 1px solid transparent;
}
.c-button--grey:hover, .c-button--grey.pseudo-class-hover {
  background-color: #FFFFFF;
  border: 1px solid #666;
  color: #666;
}

.c-button--with-arrow {
  border: none;
  padding-left: 0;
  padding-right: 30px;
  margin-right: 10px;
  position: relative;
}
.c-button--with-arrow:hover {
  background-color: transparent;
}
.c-button--with-arrow:after {
  content: "";
  background: url("images/arrow-blue.svg") no-repeat center center/contain;
  height: 13px;
  margin-top: -6.5px;
  position: absolute;
  right: 0;
  top: 49%;
  width: 10px;
}

.c-button--move-back {
  background: transparent url("images/arrow-blue-thick-left.png") no-repeat 1px center;
  background-size: auto 1em;
  border: none;
  color: #000;
  padding-left: 26px;
}

.list__title {
  border-bottom: 1px solid #CCCCCC;
  padding-bottom: 15px;
  margin-bottom: 10px;
}

.list__item {
  border-bottom: 1px solid #CCCCCC;
  color: #000;
  display: block;
  padding-bottom: 15px;
  margin-bottom: 15px;
  background: url("images/arrow-blue.svg") right 7px no-repeat;
  background-size: 18px 14px;
}

input {
  margin: 0 0 20px 0;
}

input[type="text"],
input[type="email"],
select {
  height: 37px;
  padding: 0 8px;
  border: 1px solid #aaa;
  border-radius: 5px;
  max-width: 100%;
}

textarea {
  border: 1px solid #aaa;
  border-radius: 5px;
  max-width: 100%;
  padding: 0 8px;
}

select {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: url("images/chosen-arrow-down.png") 96% 50% no-repeat #FFFFFF;
}

label {
  display: block;
}

.slider {
  color: #aaa;
  position: relative;
  border: 1px solid #e6e6e6;
  padding: 30px 60px;
}

.slider__max {
  position: absolute;
  top: 25px;
  right: 21px;
}

.slider__min {
  position: absolute;
  top: 25px;
  left: 25px;
}

/**
 * Jquery UI overrides.
 */
.ui-slider .slider__handle.ui-slider-handle {
  width: 2em;
  height: 2em;
  border-radius: 100px;
  top: 50%;
  margin-top: -1.05em;
  margin-left: -1.2em;
  text-align: center;
  line-height: 2em;
  padding: 1px 1px 0 0;
  background: #1f9ad7;
  color: #FFFFFF;
  cursor: pointer;
  border: none;
}

.ui-slider .slider__handle.ui-slider-handle:active {
  border: none;
}

.ui-slider.ui-widget.ui-widget-content {
  border: 1px solid #e6e6e6;
}

.navbar {
  font-size: 1.05em;
  z-index: 5;
  border-bottom: 1px solid #A9A9A9;
  padding: 0;
}

.navbar__item {
  display: inline-block;
  margin-right: 30px;
}

.navbar__link {
  padding: 15px 0;
  margin-bottom: -1px;
  z-index: 10;
}

.navbar__link.is-active {
  display: block;
  border-bottom: 4px solid #1f9ad7;
}

.details__summary {
  background: url("images/arrow-blue-thin.svg") center right no-repeat;
  background-size: 15px;
  cursor: pointer;
}
.details__summary::-webkit-details-marker {
  display: none;
}

.details[open] .details__summary {
  background-image: url("images/arrow-down-blue.svg");
  background-size: 18px;
  margin-bottom: 12.5px;
}

@keyframes placeHolderShimmer {
  0% {
    background-position: -468px 0;
  }
  100% {
    background-position: 468px 0;
  }
}
.content-loading {
  animation-duration: 1s;
  animation-fill-mode: forwards;
  animation-iteration-count: infinite;
  animation-name: placeHolderShimmer;
  animation-timing-function: linear;
  background-color: #e6e6e6;
  background: linear-gradient(to right, #e6e6e6 8%, #CCCCCC 18%, #e6e6e6 33%);
  background-size: 800px 104px;
  position: relative;
  height: 17px;
}

.content-loading--full-width {
  width: 100%;
}

.content-loading--one-word {
  width: 50px;
}

.content-loading--two-thirds-width {
  width: 66%;
}

.content-loading--half-width {
  width: 50%;
}

.content-loading--vertical-space {
  margin-bottom: 13px;
}

.table {
  display: table;
  text-align: left;
  width: 100%;
}

.table__header {
  font-weight: bold;
  border-top: solid 1px #e6e6e6;
  border-bottom: solid 1px #e6e6e6;
  padding: 15px 10px;
}

.table__row {
  background: #fff;
  width: 100%;
  border-bottom: solid 1px #e6e6e6;
}

.table__row--odd {
  background: #fafafa;
}

.table__cell {
  padding: 15px 10px;
}

.table__left {
  padding-right: 10px;
}

.table__right {
  padding-left: 10px;
}

.table--mobile {
  width: 100%;
}
.table--mobile tr:first-child {
  border-top: solid 1px #e6e6e6;
}

.table__row {
  padding: 12px 0;
}

.table__content:first-child {
  font-weight: bold;
}

.table--mobile-headers {
  padding-left: 25%;
  position: relative;
}
.table--mobile-headers .table__content:before {
  font-weight: bold;
  content: attr(data-mobile-label);
  display: inline-block;
  width: 25%;
  position: absolute;
  left: 0;
  padding: 0 10px;
}
.table--mobile-headers .table__content:first-child {
  padding-bottom: 10px;
  padding-left: 0;
}
.table--mobile-headers .table__content:first-child:before {
  content: "";
}

.table--details details {
  font-weight: normal;
}
.table--details td:first-child {
  width: 10%;
}

